@@ -1,28 +1,85 @@
 package TestCase::PerlAPI {
+  use TestCase::Point_b3;
+  use TestCase::Point_s3;
+  use TestCase::Point_i3;
+  use TestCase::Point_l3;
+  use TestCase::Point_f3;
+  use TestCase::Point_d3;
+  
   precompile sub FLOAT_PRECICE : float () { return 16384.5f; }
   precompile sub DOUBLE_PRECICE : double () { return 65536.5; }
+
+  precompile sub call_sub_value_ref_numeric_ref_mixed_arg : void ($point1 : &TestCase::Point_i3, $value1 : &int, $point2 : &TestCase::Point_i3, $value2 : &int) {
+    $point1->{x} = (int)($point1->{x} + 1);
+    $point1->{y} = (int)($point1->{y} + 1);
+    $point1->{z} = (int)($point1->{z} + 1);
+
+    $$value1 = $$value1 + 1;
+
+    $point2->{x} = (int)($point2->{x} + 1);
+    $point2->{y} = (int)($point2->{y} + 1);
+    $point2->{z} = (int)($point2->{z} + 1);
+
+    $$value2 = $$value2 + 1;
+  }
+
+  precompile sub call_sub_value_ref_arg_byte : int ($point : &TestCase::Point_b3) {
+    $point->{x} = (byte)($point->{x} + 1);
+    $point->{y} = (byte)($point->{y} + 1);
+    $point->{z} = (byte)($point->{z} + 1);
+  }
+
+  precompile sub call_sub_value_ref_arg_short : int ($point : &TestCase::Point_s3) {
+    $point->{x} = (short)($point->{x} + 1);
+    $point->{y} = (short)($point->{y} + 1);
+    $point->{z} = (short)($point->{z} + 1);
+  }
+
+  precompile sub call_sub_value_ref_arg_int : int ($point : &TestCase::Point_i3) {
+    $point->{x} = (int)($point->{x} + 1);
+    $point->{y} = (int)($point->{y} + 1);
+    $point->{z} = (int)($point->{z} + 1);
+  }
+
+  precompile sub call_sub_value_ref_arg_long : int ($point : &TestCase::Point_l3) {
+    $point->{x} = (long)($point->{x} + 1);
+    $point->{y} = (long)($point->{y} + 1);
+    $point->{z} = (long)($point->{z} + 1);
+  }
+
+  precompile sub call_sub_value_ref_arg_float : int ($point : &TestCase::Point_f3) {
+    $point->{x} = (float)($point->{x} + 1);
+    $point->{y} = (float)($point->{y} + 1);
+    $point->{z} = (float)($point->{z} + 1);
+  }
+
+  precompile sub call_sub_value_ref_arg_double : int ($point : &TestCase::Point_d3) {
+    $point->{x} = (double)($point->{x} + 1);
+    $point->{y} = (double)($point->{y} + 1);
+    $point->{z} = (double)($point->{z} + 1);
+  }
   
-  precompile sub call_sub_ref_arg_byte : int ($byte_val : &byte) {
+  precompile sub call_sub_numeric_ref_arg_byte : int ($byte_val : &byte) {
     $$byte_val = (byte)($$byte_val + 1);
   }
   
-  precompile sub call_sub_ref_arg_short : int ($short_val : &short) {
+  precompile sub call_sub_numeric_ref_arg_short : int ($short_val : &short) {
     $$short_val = (short)($$short_val + 1);
   }
   
-  precompile sub call_sub_ref_arg_int : int ($int_val : &int) {
+  precompile sub call_sub_numeric_ref_arg_int : int ($int_val : &int) {
     $$int_val = $$int_val + 1;
   }
 
-  precompile sub call_sub_ref_arg_long : int ($long_val : &long) {
+  precompile sub call_sub_numeric_ref_arg_long : int ($long_val : &long) {
     $$long_val = $$long_val + 1;
   }
 
-  precompile sub call_sub_ref_arg_float : int ($float_val : &float) {
+  precompile sub call_sub_numeric_ref_arg_float : int ($float_val : &float) {
     $$float_val = $$float_val + 1;
   }
 
-  precompile sub call_sub_ref_arg_double : int ($double_val : &double) {
+  precompile sub call_sub_numeric_ref_arg_double : int ($double_val : &double) {
     $$double_val = $$double_val + 1;
   }
   
